chore: implement review feedback