@@ -130,9 +130,14 @@ public class MongodbPanacheMockingTest {
         Assertions.assertEquals(Optional.empty(), ((PanacheMongoRepositoryBase) realPersonRepository).findByIdOptional(0L));
 
         // normal method call
-        Assertions.assertEquals(Optional.empty(), realPersonRepository.findByIds(List.of(0L)));
+        Assertions.assertEquals(Collections.emptyList(), realPersonRepository.findByIds(List.of(0L)));
         // bridge call
-        Assertions.assertEquals(Optional.empty(), ((PanacheMongoRepositoryBase) realPersonRepository).findByIds(List.of(0L)));
+        Assertions.assertEquals(Collections.emptyList(), ((PanacheMongoRepositoryBase) realPersonRepository).findByIds(List.of(0L)));
+
+        // normal method call
+        Assertions.assertEquals(Collections.emptyList(), realPersonRepository.findByIds(0L));
+        // bridge call
+        Assertions.assertEquals(Collections.emptyList(), ((PanacheMongoRepositoryBase) realPersonRepository).findByIds(0L));
 
         // normal method call
         Assertions.assertEquals(false, realPersonRepository.deleteById(0L));
